--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/spaceimages/images/largesize/PIA18848_hires.jpg\n"
+      "/spaceimages/images/largesize/PIA16613_hires.jpg\n"
      ]
     }
    ],
@@ -153,20 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/spaceimages/images/largesize/PIA19964_hires.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/spaceimages/images/largesize/PIA16613_hires.jpg\n"
      ]
     }
    ],
    "source": [
     "# Compose url with initial url and image url\n",
-    "featured_image_url = f'https://www.jpl.nasa.gov/spaceimages{featured_image}'\n",
+    "featured_image_url = f'https://www.jpl.nasa.gov/{featured_image}'\n",
     "print(featured_image_url)"
    ]
   },
